# mlops_uber_fare_price_MLP

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: cd-pipeline-placeholder.yml  ci-pipeline.yml  ci_cd_pipe.yaml
ds/: data_preds_5s.json  data_preds_5s.txt
notebooks/: model_prototyping.ipynb  new_data_for_test.csv
uber_project/: data_push.py  feature_engineering.py  main.py  model.keras  predict.py  scaler.pkl
